--- a/css/css-lesson-02.css
+++ b/css/css-lesson-02.css
@@ -1,23 +1,43 @@
 /*stylesheet*/
 
 body {
-	background-color:  #8F00FF;
+	background-color:  #702632 ;
 	color: #000;
+	font-size:  16px;
+	font-family: 'Cardo', serif;
+	line-height: 1.7;
 }
 
 #wrapper {
-	margin:  2en auto;
+	margin:  2em auto;
 	max-width:  850px;
-	padding:  0 2en;
+	padding:  0 2em;
 }
 
 .article {
 	background-color: #fff;
+	padding:  20px 0;
+	background-color:  #fff;
 }
 
 img {
 	display:  block;
 	width:  100%;
 	height:  auto;
-	margin:  2en 0;
+	margin:  2em 0;
+}
+
+h1, p{
+	margin-left:  20px;
+	margin-right:  20px;
+}
+
+h1{
+    font-family: 'Vollkorn', serif;
+    font-weight: 600;
+	margin-top:  0;
+}
+
+.article a {
+	color: #40434E;
 }
