--- a/css/css-lesson-02.css
+++ b/css/css-lesson-02.css
@@ -6,7 +6,7 @@ body {
 	font-size:  16px;
 	font-family: 'Cardo', serif;
 	line-height: 1.7;
-	background:  url('../images/world.jpg');
+	background:  url('../Images/world.jpg');
 	background-size:  cover;
 	background-repeat: no-repeat;
 }
