--- a/css/css-lesson-04 assignment 2.css
+++ b/css/css-lesson-04 assignment 2.css
@@ -37,22 +37,29 @@ body {
 	grid-template-rows:  200px 200px;
 	grid-gap: 1rem;
 	width:  100%;
+	margin-bottom: 1rem;
 }
 
 .block{
 	background-color: yellowgreen;
+}
 
+.block-b{
+	background-color: greenyellow;
 }
 
 
 .wide{
-	grid-row:  1 / 4;
-	grid-column:  1 / 5;
-
+	grid-row:  1 / 2;
+	grid-column:  1 / 3;
 } 
 
 .tall{
 	grid-row:  1 / 3;
 	grid-column: 2 / 3;
+}
 
+.wide-tall {
+	grid-row:  1 / 3;
+	grid-column: 1 / 3;	
 }
