--- a/css/style copy.css
+++ b/css/style copy.css
@@ -7,15 +7,15 @@
 body {
   background-color: var(--background-color);
   color: var(--body-color);
-  font-family: 'Roboto Mono', monospace;
-  line-height: 1.5;
+  font-family: 'Vollkorn', monospace;
+  line-height: .5;
 }
 
 /*GENERAL*/
 
 h1, h2, h3, h4 {
-  margin: 0;
-  font-family: 'Roboto', sans-serif;
+  margin: 2;
+  font-family: 'Vollkorn', sans-serif;
 }
 
 h1 {
@@ -35,8 +35,8 @@ h4 {
 }
 
 #wrapper {
-  margin: 2rem auto;
-  max-width: 1220px;
+  margin: 1rem auto;
+  max-width: 1000px;
   padding: 0 2rem;
 }
 
@@ -47,7 +47,7 @@ h4 {
 }
 
 .grid div {
-  /*background-color:rgba(0,0,0,0.04);*/
+  background-color:rgba(230, 230, 250);
 }
 
 #logo a {
