--- a/css/style.css
+++ b/css/style.css
@@ -1,20 +1,34 @@
  
 
 body {
-  color: #aaa9ad;
-  font-family: 'Vollkorn', monospace;
+  color: #000;
+  font-family: 'Didot', sans-serif;
+  font-size: 28px;
   /*background:  url('../Images/heart.jpg');*/
-
   line-height: 2;
 }
 
-
+.container{
+  display: inline-block;
+}
+.typed-out{
+  overflow: hidden;
+  border-right: .15em solid orange;
+  white-space: nowrap;
+  animation: typing 2.5s steps(50, end) forwards;
+  font-size: 1.6rem;
+  width: 0;
+}
+@keyframes typing {
+  from { width: 0 }
+  to { width: 100% }
+}
 
 /*GENERAL*/
 
 h1, h2, h3, h4 {
   margin: 2;
-  font-family: 'Vollkorn', sans-serif;
+  font-family: 'Inspiration', cursive;
 }
 
 h1 {
@@ -45,9 +59,9 @@ h4 {
   margin-bottom: 2rem;
 }
 
-/*.grid div {
+.grid div {
   background-color:rgba(255,255,255); 
-}*/
+}
 
 #logo a {
   color: #000;
@@ -59,9 +73,10 @@ h4 {
 }
 
 #logo h1 {
-  letter-spacing: 1px;
+  letter-spacing: .1px;
   font-weight: 300;
   font-size: 2rem;
+  font-family: 'Didot', sans-serif;
 }
 
 #logo svg {
