--- a/css/style.css
+++ b/css/style.css
@@ -6,7 +6,10 @@ body {
   font-size: 28px;
   /*background:  url('../Images/heart.jpg');*/
   line-height: 2;
+
+
 }
+
 
 .container{
   display: inline-block;
@@ -30,12 +33,64 @@ body {
   display:  flex;
 }
 
+ #work h3 {
+  margin-bottom:  2rem;
+}
+
+
+.work-item {
+  overflow: hidden;
+  height: 0;
+  position: relative;
+  width: 100%; 
+  padding-top: calc((1 / 1) * 100%); 
+  background-color: var(--body-color);
+}
+
+.work-item .inner {
+  text-decoration: none;
+  position: absolute; 
+  z-index: 2;
+  display: flex;
+  align-items: flex-end;
+  top: 0;
+  left: 0;
+  width: 55%; 
+  height: 75%; 
+}
+
+.work-item .inner .work-inside {
+  transition: opacity .3s ease-in-out;
+  opacity: 0;
+  color: #fff;
+  padding: 3rem;
+  width: 100%;
+  background-color:rgba(0,0,0,0.6);
+  text-align: right;
+}
+
+.work-item .inner:hover .work-inside {
+  opacity: 1;
+}
+
+.work-item img {
+  display: block;
+  position: absolute;
+  z-index: -1;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%; 
+
+}
+
 
 /*GENERAL*/
 
-h1, h2, h3, h4 {
+h1, h2, h4 {
   margin: 2;
   font-family: 'Inspiration', cursive;
+  line-height: 1;
 }
 
 h1 {
@@ -48,6 +103,7 @@ h2 {
 
 h3 {
   font-size: 1.6rem;
+  font-family: Didot, monospace;
 }
 
 h4 {
@@ -99,17 +155,52 @@ h4 {
   padding: 0 4px;
 }
 
-/* Create four equal columns that sits next to each other */
 .column {
-  flex: 25%;
-  max-width: 50%;
-  padding: 0 4px;
+  flex: 100%;
+  max-width: 100%;
 }
 
 .column img {
-  margin-top: 8px;
   vertical-align: middle;
+}
+
+.container {
+  position: relative;
   width: 100%;
+}
+
+.image {
+  display: block;
+  width: 100%;
+  height: auto;
+}
+
+.overlay {
+  position: absolute;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  height: 100%;
+  width: 100%;
+  opacity: 0;
+  transition: 0.5s ease;
+  background-color: black;
+}
+
+.container:hover .overlay {
+  opacity: 0.5;
+}
+
+.text {
+  color: white;
+  font-size: 20px;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  -ms-transform: translate(-50%, -50%);
+  text-align: center;
 }
 
 /* Responsive layout - makes a two column-layout instead of four columns */
@@ -138,7 +229,7 @@ text-decoration-color: transparent;
 display: inline-block; 
 width: 100%; 
 text-align: center; 
-transition: text-decoration-color .4s cubic-bezier(.694, .0482, .335, 1);
+transition: text-decoration-color .3s ease-in-out;
 }
 
 #nav a:hover { 
@@ -245,6 +336,7 @@ transition: text-decoration-color .4s cubic-bezier(.694, .0482, .335, 1);
     transform: rotate(-90deg);
     transition: bottom 0.075s ease, transform 0.075s 0.12s cubic-bezier(0.215, 0.61, 0.355, 1); }
 
+
 /*RESPONSIVE*/
 
 /* for variable type sizing */
@@ -264,7 +356,25 @@ transition: text-decoration-color .4s cubic-bezier(.694, .0482, .335, 1);
   }
   }
   @media all and (min-width: 700px){
+
+/* Tablet Styles */
+@media only screen and (min-width: 480px) {
+    .column {
+      flex: 50%;
+      max-width: 50%;
+    }
+}
+ 
+ 
+/* Desktop Styles */
+@media only screen and (min-width: 1024px) {
+    .column {
+      flex: 33.3%;
+      max-width: 33.3%;
+    }
+}
    
 
 
 } 
+
