--- a/css/style.css
+++ b/css/style.css
@@ -1,7 +1,12 @@
- 
+/*vars*/
+: root {
+  --background-color: #fff;
+  __body-color:  #111;
+}
 
 body {
-  color: #000;
+  background-color: var(--background-color);
+  color: var(--body-color);;
   font-family: 'Didot', sans-serif;
   font-size: 28px;
   /*background:  url('../Images/heart.jpg');*/
@@ -33,10 +38,16 @@ body {
   display:  flex;
 }
 
- #work h3 {
+ #work h3, #writing h3 {
+  letter-spacing:  1px;
   margin-bottom:  2rem;
 }
 
+/*ask about this part*/
+ #work h3 a, #BlogPosts h3 a, #WomensFashion h3 a {
+  color:  var(--body-color);
+  text-decoration:  none ;
+}
 
 .work-item {
   overflow: hidden;
@@ -84,6 +95,29 @@ body {
 
 }
 
+.writing-item .date-holder {
+  margin-bottom: .25em;
+}
+
+.writing-item .date {
+  margin: 0;
+  font-size: .85rem;
+  padding: 0 4px;
+  color: var(--background-color);
+  display: inline-block;
+  background-color: var(--body-color);
+}
+
+.writing-item h2 a {
+  color: var(--body-color);
+  text-decoration-color: transparent; 
+  transition: text-decoration-color .3s ease-in-out;
+}
+
+.writing-item h2 a:hover {
+  color: var(--body-color);
+  text-decoration-color: var(--body-color); 
+}
 
 /*GENERAL*/
 
@@ -127,10 +161,10 @@ h4 {
 }
 
 #logo a {
-  color: #000;
+  color: var(--body-color);
   text-decoration: none;
   display: flex;
-  width: 100%;
+  width: 100%; 
   height: 100%;
   align-items: center;
 }
@@ -222,7 +256,7 @@ h4 {
 /*NAV*/
 
 #nav a { 
-color: #000;
+color: var(--body-color);
 font-weight: 300; 
 letter-spacing: 2px; 
 text-decoration-color: transparent; 
@@ -233,7 +267,7 @@ transition: text-decoration-color .3s ease-in-out;
 }
 
 #nav a:hover { 
-  text-decoration-color: #000;
+  text-decoration-color: var(--body-color);
 }
 
 #nav.active {
