--- a/css/style.css
+++ b/css/style.css
@@ -15,10 +15,6 @@ body {
 
 }
 
-
-.container{
-  display: inline-block;
-}
 .typed-out{
   overflow: hidden;
   border-right: .15em solid orange;
@@ -45,7 +41,7 @@ body {
 }
 
 /*ask about this part*/
- #work h3 a, #BlogPosts h3 a, #WomensFashion h3 a {
+ #work h3 a, #BlogPosts h3 a, #WomensFashion h3 a, #home h3 a {
   color:  var(--body-color);
   text-decoration:  none ;
 }
@@ -158,7 +154,7 @@ h4 {
 }
 
 .grid div {
-  background-color:rgba(255,255,255); 
+  /*background-color:rgba(255,255,255); */
 }
 
 #logo a {
@@ -195,11 +191,18 @@ h4 {
   max-width: 100%;
 }
 
-.column img {
-  vertical-align: middle;
+.container img {
+}
+
+.container a {
+  display: block;
+  overflow: hidden;
+  width: 100%;
+  height: 100%;
 }
 
 .container {
+  overflow: hidden;
   position: relative;
   width: 100%;
 }
@@ -211,6 +214,7 @@ h4 {
 }
 
 .overlay {
+  z-index: 2;
   position: absolute;
   top: 0;
   bottom: 0;
