--- a/css/style.css
+++ b/css/style.css
@@ -202,9 +202,9 @@ h4 {
 }
 
 .container {
-  overflow: hidden;
   position: relative;
   width: 100%;
+  display: block;
 }
 
 .image {
@@ -217,9 +217,6 @@ h4 {
   z-index: 2;
   position: absolute;
   top: 0;
-  bottom: 0;
-  left: 0;
-  right: 0;
   height: 100%;
   width: 100%;
   opacity: 0;
